remove enable/disable records from API
