# cli/disable_dns_zone_record_operation.go
@@ -1,165 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package cli
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"fmt"
-
-	"github.com/dalet-oss/iris-api/client/dns"
-
-	"github.com/spf13/cobra"
-)
-
-// makeOperationDNSDisableDNSZoneRecordCmd returns a cmd to handle operation disableDnsZoneRecord
-func makeOperationDNSDisableDNSZoneRecordCmd() (*cobra.Command, error) {
-	cmd := &cobra.Command{
-		Use:   "DisableDNSZoneRecord",
-		Short: `Disable a given DNS Zone record.`,
-		RunE:  runOperationDNSDisableDNSZoneRecord,
-	}
-
-	if err := registerOperationDNSDisableDNSZoneRecordParamFlags(cmd); err != nil {
-		return nil, err
-	}
-
-	return cmd, nil
-}
-
-// runOperationDNSDisableDNSZoneRecord uses cmd flags to call endpoint api
-func runOperationDNSDisableDNSZoneRecord(cmd *cobra.Command, args []string) error {
-	appCli, err := makeClient(cmd, args)
-	if err != nil {
-		return err
-	}
-	// retrieve flag values from cmd and fill params
-	params := dns.NewDisableDNSZoneRecordParams()
-	if err, _ := retrieveOperationDNSDisableDNSZoneRecordRecordIDFlag(params, "", cmd); err != nil {
-		return err
-	}
-	if err, _ := retrieveOperationDNSDisableDNSZoneRecordZoneIDFlag(params, "", cmd); err != nil {
-		return err
-	}
-	if dryRun {
-
-		logDebugf("dry-run flag specified. Skip sending request.")
-		return nil
-	}
-	// make request and then print result
-	msgStr, err := parseOperationDNSDisableDNSZoneRecordResult(appCli.DNS.DisableDNSZoneRecord(params, nil))
-	if err != nil {
-		return err
-	}
-	if !debug {
-
-		fmt.Println(msgStr)
-	}
-	return nil
-}
-
-// registerOperationDNSDisableDNSZoneRecordParamFlags registers all flags needed to fill params
-func registerOperationDNSDisableDNSZoneRecordParamFlags(cmd *cobra.Command) error {
-	if err := registerOperationDNSDisableDNSZoneRecordRecordIDParamFlags("", cmd); err != nil {
-		return err
-	}
-	if err := registerOperationDNSDisableDNSZoneRecordZoneIDParamFlags("", cmd); err != nil {
-		return err
-	}
-	return nil
-}
-
-func registerOperationDNSDisableDNSZoneRecordRecordIDParamFlags(cmdPrefix string, cmd *cobra.Command) error {
-
-	recordIdDescription := `Required. The ID of the DNS record to disable.`
-
-	var recordIdFlagName string
-	if cmdPrefix == "" {
-		recordIdFlagName = "recordId"
-	} else {
-		recordIdFlagName = fmt.Sprintf("%v.recordId", cmdPrefix)
-	}
-
-	var recordIdFlagDefault string
-
-	_ = cmd.PersistentFlags().String(recordIdFlagName, recordIdFlagDefault, recordIdDescription)
-
-	return nil
-}
-func registerOperationDNSDisableDNSZoneRecordZoneIDParamFlags(cmdPrefix string, cmd *cobra.Command) error {
-
-	zoneIdDescription := `Required. The ID of the zone's record to disable.`
-
-	var zoneIdFlagName string
-	if cmdPrefix == "" {
-		zoneIdFlagName = "zoneId"
-	} else {
-		zoneIdFlagName = fmt.Sprintf("%v.zoneId", cmdPrefix)
-	}
-
-	var zoneIdFlagDefault string
-
-	_ = cmd.PersistentFlags().String(zoneIdFlagName, zoneIdFlagDefault, zoneIdDescription)
-
-	return nil
-}
-
-func retrieveOperationDNSDisableDNSZoneRecordRecordIDFlag(m *dns.DisableDNSZoneRecordParams, cmdPrefix string, cmd *cobra.Command) (error, bool) {
-	retAdded := false
-	if cmd.Flags().Changed("recordId") {
-
-		var recordIdFlagName string
-		if cmdPrefix == "" {
-			recordIdFlagName = "recordId"
-		} else {
-			recordIdFlagName = fmt.Sprintf("%v.recordId", cmdPrefix)
-		}
-
-		recordIdFlagValue, err := cmd.Flags().GetString(recordIdFlagName)
-		if err != nil {
-			return err, false
-		}
-		m.RecordID = recordIdFlagValue
-
-	}
-	return nil, retAdded
-}
-func retrieveOperationDNSDisableDNSZoneRecordZoneIDFlag(m *dns.DisableDNSZoneRecordParams, cmdPrefix string, cmd *cobra.Command) (error, bool) {
-	retAdded := false
-	if cmd.Flags().Changed("zoneId") {
-
-		var zoneIdFlagName string
-		if cmdPrefix == "" {
-			zoneIdFlagName = "zoneId"
-		} else {
-			zoneIdFlagName = fmt.Sprintf("%v.zoneId", cmdPrefix)
-		}
-
-		zoneIdFlagValue, err := cmd.Flags().GetString(zoneIdFlagName)
-		if err != nil {
-			return err, false
-		}
-		m.ZoneID = zoneIdFlagValue
-
-	}
-	return nil, retAdded
-}
-
-// parseOperationDNSDisableDNSZoneRecordResult parses request result and return the string content
-func parseOperationDNSDisableDNSZoneRecordResult(resp0 *dns.DisableDNSZoneRecordCreated, respErr error) (string, error) {
-	if respErr != nil {
-
-		// Non schema case: warning disableDnsZoneRecordCreated is not supported
-
-		// Non schema case: warning disableDnsZoneRecordConflict is not supported
-
-		// Non schema case: warning disableDnsZoneRecordInternalServerError is not supported
-
-		return "", respErr
-	}
-
-	// warning: non schema response disableDnsZoneRecordCreated is not supported by go-swagger cli yet.
-
-	return "", nil
-}
