# openapi/dns.yml
@@ -317,53 +317,3 @@ paths:
           description: Invalid zone ID or record ID was provided.
         500:
           description: Unable to remove the requested record.
-
-  /dns/zone/{zoneId}/record/{recordId}/enable:
-    post:
-      tags:
-        - dns
-      operationId: EnableDNSZoneRecord
-      description: Enable a given DNS Zone record.
-      parameters:
-        - name: zoneId
-          in: path
-          type: string
-          required: true
-          description: The ID of the zone's record to enable.
-        - name: recordId
-          in: path
-          type: string
-          required: true
-          description: The ID of the DNS record to enable.
-      responses:
-        201:
-          description: The DNS zone's record has been enabled.
-        409:
-          description: The DNS zone's record was already enable.
-        500:
-          description: Unable to enable the DNS zone's record.
-
-  /dns/zone/{zoneId}/record/{recordId}/disable:
-    post:
-      tags:
-        - dns
-      operationId: DisableDNSZoneRecord
-      description: Disable a given DNS Zone record.
-      parameters:
-        - name: zoneId
-          in: path
-          type: string
-          required: true
-          description: The ID of the zone's record to disable.
-        - name: recordId
-          in: path
-          type: string
-          required: true
-          description: The ID of the DNS record to disable.
-      responses:
-        201:
-          description: The DNS zone's record has been disabled.
-        409:
-          description: The DNS zone's record was already disable.
-        500:
-          description: Unable to disable the DNS zone's record.
