# server/api/dns/disable_dns_zone_record.go
@@ -1,69 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package dns
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime/middleware"
-)
-
-// DisableDNSZoneRecordHandlerFunc turns a function with the right signature into a disable DNS zone record handler
-type DisableDNSZoneRecordHandlerFunc func(DisableDNSZoneRecordParams, interface{}) middleware.Responder
-
-// Handle executing the request and returning a response
-func (fn DisableDNSZoneRecordHandlerFunc) Handle(params DisableDNSZoneRecordParams, principal interface{}) middleware.Responder {
-	return fn(params, principal)
-}
-
-// DisableDNSZoneRecordHandler interface for that can handle valid disable DNS zone record params
-type DisableDNSZoneRecordHandler interface {
-	Handle(DisableDNSZoneRecordParams, interface{}) middleware.Responder
-}
-
-// NewDisableDNSZoneRecord creates a new http.Handler for the disable DNS zone record operation
-func NewDisableDNSZoneRecord(ctx *middleware.Context, handler DisableDNSZoneRecordHandler) *DisableDNSZoneRecord {
-	return &DisableDNSZoneRecord{Context: ctx, Handler: handler}
-}
-
-/*
-	DisableDNSZoneRecord swagger:route POST /dns/zone/{zoneId}/record/{recordId}/disable dns disableDnsZoneRecord
-
-Disable a given DNS Zone record.
-*/
-type DisableDNSZoneRecord struct {
-	Context *middleware.Context
-	Handler DisableDNSZoneRecordHandler
-}
-
-func (o *DisableDNSZoneRecord) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
-	route, rCtx, _ := o.Context.RouteInfo(r)
-	if rCtx != nil {
-		*r = *rCtx
-	}
-	var Params = NewDisableDNSZoneRecordParams()
-	uprinc, aCtx, err := o.Context.Authorize(r, route)
-	if err != nil {
-		o.Context.Respond(rw, r, route.Produces, route, err)
-		return
-	}
-	if aCtx != nil {
-		*r = *aCtx
-	}
-	var principal interface{}
-	if uprinc != nil {
-		principal = uprinc.(interface{}) // this is really a interface{}, I promise
-	}
-
-	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
-		o.Context.Respond(rw, r, route.Produces, route, err)
-		return
-	}
-
-	res := o.Handler.Handle(Params, principal) // actually handle the request
-	o.Context.Respond(rw, r, route.Produces, route, res)
-
-}
